# c99-game-template

./: CMakeLists.txt  LICENSES.txt  README.md
include/: NOTE.txt
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/glfw/: CMakeLists.txt
lib/physac/: physac.h
src/: main.c
